// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSections() should return an array 1`] = `
Array [
  Object {
    "components": Array [],
    "content": Object {
      "require": "!!~/loaders/examples-loader.js!~/test/components/Button/Readme.md",
    },
    "description": undefined,
    "exampleMode": "collapse",
    "external": undefined,
    "filepath": "components/Button/Readme.md",
    "href": undefined,
    "name": "Readme",
    "sectionDepth": 0,
    "sections": Array [],
    "slug": "readme-1",
    "usageMode": "collapse",
  },
  Object {
    "components": Array [
      Object {
        "filepath": "components/Annotation/Annotation.js",
        "hasExamples": true,
        "metadata": Object {},
        "module": Object {
          "require": "~/test/components/Annotation/Annotation.js",
        },
        "pathLine": "components/Annotation/Annotation.js",
        "props": Object {
          "require": "!!~/loaders/props-loader.js!~/test/components/Annotation/Annotation.js",
        },
        "slug": "annotation-1",
      },
      Object {
        "filepath": "components/Button/Button.js",
        "hasExamples": true,
        "metadata": Object {},
        "module": Object {
          "require": "~/test/components/Button/Button.js",
        },
        "pathLine": "components/Button/Button.js",
        "props": Object {
          "require": "!!~/loaders/props-loader.js!~/test/components/Button/Button.js",
        },
        "slug": "button-2",
      },
      Object {
        "filepath": "components/Placeholder/Placeholder.js",
        "hasExamples": true,
        "metadata": Object {
          "require": "~/test/components/Placeholder/Placeholder.json",
        },
        "module": Object {
          "require": "~/test/components/Placeholder/Placeholder.js",
        },
        "pathLine": "components/Placeholder/Placeholder.js",
        "props": Object {
          "require": "!!~/loaders/props-loader.js!~/test/components/Placeholder/Placeholder.js",
        },
        "slug": "placeholder-2",
      },
      Object {
        "filepath": "components/Price/Price.js",
        "hasExamples": true,
        "metadata": Object {},
        "module": Object {
          "require": "~/test/components/Price/Price.js",
        },
        "pathLine": "components/Price/Price.js",
        "props": Object {
          "require": "!!~/loaders/props-loader.js!~/test/components/Price/Price.js",
        },
        "slug": "price-2",
      },
      Object {
        "filepath": "components/RandomButton/RandomButton.js",
        "hasExamples": true,
        "metadata": Object {},
        "module": Object {
          "require": "~/test/components/RandomButton/RandomButton.js",
        },
        "pathLine": "components/RandomButton/RandomButton.js",
        "props": Object {
          "require": "!!~/loaders/props-loader.js!~/test/components/RandomButton/RandomButton.js",
        },
        "slug": "randombutton-2",
      },
    ],
    "content": undefined,
    "description": undefined,
    "exampleMode": "collapse",
    "external": undefined,
    "filepath": undefined,
    "href": undefined,
    "name": "Components",
    "sectionDepth": 0,
    "sections": Array [],
    "slug": "components-1",
    "usageMode": "collapse",
  },
  Object {
    "components": Array [
      Object {
        "filepath": "components/Button/Button.js",
        "hasExamples": true,
        "metadata": Object {},
        "module": Object {
          "require": "~/test/components/Button/Button.js",
        },
        "pathLine": "components/Button/Button.js",
        "props": Object {
          "require": "!!~/loaders/props-loader.js!~/test/components/Button/Button.js",
        },
        "slug": "button-3",
      },
      Object {
        "filepath": "components/Placeholder/Placeholder.js",
        "hasExamples": true,
        "metadata": Object {
          "require": "~/test/components/Placeholder/Placeholder.json",
        },
        "module": Object {
          "require": "~/test/components/Placeholder/Placeholder.js",
        },
        "pathLine": "components/Placeholder/Placeholder.js",
        "props": Object {
          "require": "!!~/loaders/props-loader.js!~/test/components/Placeholder/Placeholder.js",
        },
        "slug": "placeholder-3",
      },
      Object {
        "filepath": "components/Price/Price.js",
        "hasExamples": true,
        "metadata": Object {},
        "module": Object {
          "require": "~/test/components/Price/Price.js",
        },
        "pathLine": "components/Price/Price.js",
        "props": Object {
          "require": "!!~/loaders/props-loader.js!~/test/components/Price/Price.js",
        },
        "slug": "price-3",
      },
      Object {
        "filepath": "components/RandomButton/RandomButton.js",
        "hasExamples": true,
        "metadata": Object {},
        "module": Object {
          "require": "~/test/components/RandomButton/RandomButton.js",
        },
        "pathLine": "components/RandomButton/RandomButton.js",
        "props": Object {
          "require": "!!~/loaders/props-loader.js!~/test/components/RandomButton/RandomButton.js",
        },
        "slug": "randombutton-3",
      },
    ],
    "content": undefined,
    "description": undefined,
    "exampleMode": "collapse",
    "external": undefined,
    "filepath": undefined,
    "href": undefined,
    "name": "Ignore",
    "sectionDepth": 0,
    "sections": Array [],
    "slug": "ignore-1",
    "usageMode": "collapse",
  },
]
`;

exports[`processSection() should return an object for section with components 1`] = `
Object {
  "components": Array [
    Object {
      "filepath": "components/Annotation/Annotation.js",
      "hasExamples": true,
      "metadata": Object {},
      "module": Object {
        "require": "~/test/components/Annotation/Annotation.js",
      },
      "pathLine": "components/Annotation/Annotation.js",
      "props": Object {
        "require": "!!~/loaders/props-loader.js!~/test/components/Annotation/Annotation.js",
      },
      "slug": "annotation",
    },
    Object {
      "filepath": "components/Button/Button.js",
      "hasExamples": true,
      "metadata": Object {},
      "module": Object {
        "require": "~/test/components/Button/Button.js",
      },
      "pathLine": "components/Button/Button.js",
      "props": Object {
        "require": "!!~/loaders/props-loader.js!~/test/components/Button/Button.js",
      },
      "slug": "button",
    },
    Object {
      "filepath": "components/Placeholder/Placeholder.js",
      "hasExamples": true,
      "metadata": Object {
        "require": "~/test/components/Placeholder/Placeholder.json",
      },
      "module": Object {
        "require": "~/test/components/Placeholder/Placeholder.js",
      },
      "pathLine": "components/Placeholder/Placeholder.js",
      "props": Object {
        "require": "!!~/loaders/props-loader.js!~/test/components/Placeholder/Placeholder.js",
      },
      "slug": "placeholder",
    },
    Object {
      "filepath": "components/Price/Price.js",
      "hasExamples": true,
      "metadata": Object {},
      "module": Object {
        "require": "~/test/components/Price/Price.js",
      },
      "pathLine": "components/Price/Price.js",
      "props": Object {
        "require": "!!~/loaders/props-loader.js!~/test/components/Price/Price.js",
      },
      "slug": "price",
    },
    Object {
      "filepath": "components/RandomButton/RandomButton.js",
      "hasExamples": true,
      "metadata": Object {},
      "module": Object {
        "require": "~/test/components/RandomButton/RandomButton.js",
      },
      "pathLine": "components/RandomButton/RandomButton.js",
      "props": Object {
        "require": "!!~/loaders/props-loader.js!~/test/components/RandomButton/RandomButton.js",
      },
      "slug": "randombutton",
    },
  ],
  "content": undefined,
  "description": undefined,
  "exampleMode": "collapse",
  "external": undefined,
  "filepath": undefined,
  "href": undefined,
  "name": "Components",
  "sectionDepth": 0,
  "sections": Array [],
  "slug": "components",
  "usageMode": "collapse",
}
`;

exports[`processSection() should return an object for section with content 1`] = `
Object {
  "components": Array [],
  "content": Object {
    "require": "!!~/loaders/examples-loader.js!~/test/components/Button/Readme.md",
  },
  "description": undefined,
  "exampleMode": "collapse",
  "external": undefined,
  "filepath": "components/Button/Readme.md",
  "href": undefined,
  "name": "Readme",
  "sectionDepth": 0,
  "sections": Array [],
  "slug": "readme",
  "usageMode": "collapse",
}
`;

exports[`processSection() should return an object for section without ignored components 1`] = `
Object {
  "components": Array [
    Object {
      "filepath": "components/Button/Button.js",
      "hasExamples": true,
      "metadata": Object {},
      "module": Object {
        "require": "~/test/components/Button/Button.js",
      },
      "pathLine": "components/Button/Button.js",
      "props": Object {
        "require": "!!~/loaders/props-loader.js!~/test/components/Button/Button.js",
      },
      "slug": "button-1",
    },
    Object {
      "filepath": "components/Placeholder/Placeholder.js",
      "hasExamples": true,
      "metadata": Object {
        "require": "~/test/components/Placeholder/Placeholder.json",
      },
      "module": Object {
        "require": "~/test/components/Placeholder/Placeholder.js",
      },
      "pathLine": "components/Placeholder/Placeholder.js",
      "props": Object {
        "require": "!!~/loaders/props-loader.js!~/test/components/Placeholder/Placeholder.js",
      },
      "slug": "placeholder-1",
    },
    Object {
      "filepath": "components/Price/Price.js",
      "hasExamples": true,
      "metadata": Object {},
      "module": Object {
        "require": "~/test/components/Price/Price.js",
      },
      "pathLine": "components/Price/Price.js",
      "props": Object {
        "require": "!!~/loaders/props-loader.js!~/test/components/Price/Price.js",
      },
      "slug": "price-1",
    },
    Object {
      "filepath": "components/RandomButton/RandomButton.js",
      "hasExamples": true,
      "metadata": Object {},
      "module": Object {
        "require": "~/test/components/RandomButton/RandomButton.js",
      },
      "pathLine": "components/RandomButton/RandomButton.js",
      "props": Object {
        "require": "!!~/loaders/props-loader.js!~/test/components/RandomButton/RandomButton.js",
      },
      "slug": "randombutton-1",
    },
  ],
  "content": undefined,
  "description": undefined,
  "exampleMode": "collapse",
  "external": undefined,
  "filepath": undefined,
  "href": undefined,
  "name": "Ignore",
  "sectionDepth": 0,
  "sections": Array [],
  "slug": "ignore",
  "usageMode": "collapse",
}
`;
